--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ margin-right:auto;
   <div class="main-navigation" style="line-height:14px;word-spacing:0px; width:55.5%;">
     <ul>
       <li><a href="index.html">Home</a></li>  
-    <li><a href="pages/faculty.html">T-chers</a></li>
+    <li><a href="pages/faculty.html">Teach</a></li>
 	  <li><a href="#">Programs</a>
         <ul>
           <li><a href="#">Bachelors</a>
