--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <link rel="stylesheet" href="layout/styles/layout.css" type="text/css" />
 <style>
-/* Browser Resets */
+/* Browser Resets sssss */
 .flex-container a:active,
 .flexslider a:active,
 .flex-container a:focus,
