logo & menu setting
setting

--- a/index.html
+++ b/index.html
@@ -238,16 +238,17 @@ margin-right:auto;
 <div class="wrapper row1">
   <div id="header" class="clear" >
     <div class="fl_left">
+      <a href="http://quest.edu.pk" target="_blank"><img src="images/logo.png" style="padding:0px; height:100px;width:110px;margin:0px 0px -120px -70px;"></a>
       <h1 style="margin-top:5px;margin-left:60px;"><a href="#">Computer Systems Engineering Department</a></h1>
       <h2 style="margin-left:60px; margin-bottom:0px;">Quaid-e-awam University of Engineering, Science & Technology,</h2>
 	  <h2 style="margin-left:60px;margin-bottom:0px;">Nawabshah-Pakistan</h2>
-	 <a href="http://quest.edu.pk" target="_blank"><img src="images/logo.png" style="padding:0px; height:100px;width:110px;margin:-85px 0px -120px -70px;"></a>
+	 
   </div>
   </div>
 </div>
 <!-- ####################################################################################################### -->
 <div class="wrapper row2">
-  <div class="main-navigation" style="line-height:14px;word-spacing:0px; width:55.5%;">
+  <div class="main-navigation" style="line-height:14px;word-spacing:0px; width:765px;">
     <ul>
       <li><a href="index.html">Home</a></li>  
     <li><a href="pages/faculty.html">Teaching</a></li>
