--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ margin-right:auto;
   <div class="main-navigation" style="line-height:14px;word-spacing:0px; width:765px;">
     <ul>
       <li><a href="index.html">Home</a></li>  
-    <li><a href="pages/faculty.html">Teaching</a></li>
+    <li><a href="pages/faculty.html">Faculty</a></li>
 	  <li><a href="#">Programs</a>
         <ul>
           <li><a href="#">Bachelors</a>
