--- a/index.html
+++ b/index.html
@@ -254,20 +254,11 @@ margin-right:auto;
     <li><a href="pages/faculty.html">Faculty</a></li>
 	  <li><a href="#">Programs</a>
         <ul>
-          <li><a href="#">Bachelors</a>
-				<ul>
-				  <li><a href="pages/B-courses.html">Courses</a></li>
-				</ul>
+          <li><a href="pages/B-courses.html">Bachelors</a>
 		  </li>
-          <li><a href="#">Masters</a>
-			<ul>
-				  <li><a href="pages/under-construction.html">Courses</a></li>
-			</ul>
+          <li><a href="pages/under-construction.html">Masters</a>
 		  </li>
-          <li><a href="#">PhD</a>
-			<ul>
-				  <li><a href="pages/under-construction.html">Courses</a></li>
-			</ul>
+          <li><a href="pages/under-construction.html">PhD</a>
 		  </li>
         </ul>
       </li>
