--- a/pages/contact.html
+++ b/pages/contact.html
@@ -71,15 +71,56 @@
     <div  class="clear"></div>
   </div>
 </div>
+
+
+
+
 <!-- ####################################################################################################### -->
 
 <div class="wrapper row3">
 <br>
 </div>
-<!-- ####################################################################################################### -->
-<iframe src="contact/contact.html" style="border:0px;width:100%;height:885px;position:center;overflow:hidden;padding:0px 0px 2px 0px;" scrolling="no">
 
-</iframe>
+<div class="wrapper row4">
+    <br><br>
+    <div style="margin-left:10%;padding-bottom:15%">
+
+        <div class="holder">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d114521.56188039047!2d68.35509907881085!3d26.235725999999993!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xa3643f4b36eec24f!2sQuaid-e-Awam+University+of+Engineering%2C+Sciences+%26+Technology!5e0!3m2!1sen!2sus!4v1448440990398" width="400" height="400" style="border: 0px solid white;"></iframe>
+        </div>
+        <div style="margin-left:40%;margin-top:-33%">
+            <h2>Postal Address:</h2>
+            <p> Computer Systems Engineering Department, Quaid-e-Awam University of Engineering, Science and Technology, Nawabshah-67480, Sindh, Pakistan</p>
+        </div>
+        <br><br>
+        <div>
+            <img src="../images/email.png" style="margin-left:40%;width:20px;height:20px;">
+
+        </div>
+
+
+        <div style="margin-left:43%;margin-top:-3%">
+            <p>pardeep.kumar@quest.edu.pk, ch_cse@quest.edu.pk </p>
+        </div>
+
+        <div>
+            <img src="../images/phone.png" style="margin-left:40%;margin-top:1%;width:20px;height:20px;">
+            <p style="margin-left:43%;margin-top:-1.5%">0244 93070381-5 (Ext. 2131) </p>
+
+        </div>
+
+        <div>
+            <img src="../images/facebook.jpeg" style="margin-left:40%;margin-top:1%;width:20px;height:20px;">
+            <p style="margin-left:43%;margin-top:-1.5%"> <a href="https://www.facebook.com/groups/csquest/">Department's facebook group</a> </p>
+
+
+        </div>
+
+    </div>
+    <br><br><br>
+</div>
+<!-- ####################################################################################################### -->
+
 <!-- ####################################################################################################### -->
 <div class="wrapper">
   <div id="copyright" class="clear">
