--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,70 +12,55 @@
 </head>
 <body id="top">
 <div class="wrapper row1">
-  <div id="header" class="clear">
-    <div class="fl_left">
-      <h1 style="margin-top:5px; margin-left:110px;"><a href="#">Computer Systems Engineering Department</a></h1>
-	  <h6 style="margin-top:5px; margin-left:110px;"><a href="#">Quaid-e-Awam University of Engineering, Science & Technology, Nawabshah</a></h6>
-	  <a href="http://quest.edu.pk" target="_blank"><img src="../images/logo.png" style="padding:0px; height:100px;width:200px;margin:-65px 0px -120px -70px;"></a>
-      <!--<p>QUEST, Nawabshah-Pakistan</p>-->
+    <div id="header" class="clear" >
+        <div class="fl_left">
+            <a href="http://quest.edu.pk" target="_blank"><img src="images/logo.png" style="padding:0px; height:100px;width:110px;margin:0px 0px -120px -70px;"></a>
+            <h1 style="margin-top:5px;margin-left:60px;"><a href="#">Computer Systems Engineering Department</a></h1>
+            <h2 style="margin-left:60px; margin-bottom:0px;">Quaid-e-awam University of Engineering, Science & Technology,</h2>
+            <h2 style="margin-left:60px;margin-bottom:0px;">Nawabshah-Pakistan</h2>
+
+        </div>
     </div>
-  </div>
-</div> <br>
+</div>
 <!-- ####################################################################################################### -->
 <div class="wrapper row2">
-  <div class="main-navigation">
-    <ul>
-      <li><a href="../index.html">Home</a></li>  
-    <li><a href="faculty.html">Faculty</a></li>
-	  <li><a href="#">Programs</a>
+    <div class="main-navigation" style="line-height:14px;word-spacing:0px; width:765px;">
         <ul>
-          <li><a href="#">Bachelors</a>
-				<ul>
-				  <li><a href="faculty.html">Faculty</a></li>
-				  <li><a href="B-courses.html">Courses</a></li>
-				  <li><a href="students.html">Students</a></li>
-				</ul>
-		  </li>
-          <li><a href="#">Masters</a>
-			<ul>
-				  <li><a href="programs/masters/faculty.html">Faculty</a></li>
-				  <li><a href="under-construction.html">Courses</a></li>
-			</ul>
-		  </li>
-          <li><a href="#">PhD</a>
-			<ul>
-				  <li><a href="programs/phd/faculty.html">Faculty</a></li>
-				  <li><a href="under-construction.html">Courses</a></li>
-			</ul>
-		  </li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="pages/faculty.html">Faculty</a></li>
+            <li><a href="#">Programs</a>
+                <ul>
+                    <li><a href="pages/B-courses.html">Bachelors</a>
+                    </li>
+                    <li><a href="pages/under-construction.html">Masters</a>
+                    </li>
+                    <li><a href="pages/under-construction.html">PhD</a>
+                    </li>
+                </ul>
+            </li>
+            <li><a href="#">Resources</a>
+                <ul>
+                    <li><a href="pages/lib.html">Library</a></li>
+                    <li><a href="pages/resourses.html">Labs</a></li>
+                    <li><a href="pages/under-construction.html">Downloads</a></li>
+                </ul>
+            </li>
+            <li><a href="#">Research Groups</a>
+                <ul>
+                    <li><a href="pages/under-construction.html">Computer Vision</a></li>
+                    <li><a href="pages/under-construction.html">Network Security</a></li>
+                    <li><a href="pages/under-construction.html">Wireless Sensor Network</a></li>
+                    <li><a href="pages/publications.html">Publications</a></li>
+                </ul>
+            </li>
+            <li><a href="pages/under-construction.html">PEC Accedreditation</a></li>
+            <li  class="last"><a href="pages/contact.html">Contact</a></li>
         </ul>
-      </li>
-	  <li><a href="#">Resources</a>
-        <ul>
-          <li><a href="lib.html">Library</a></li>
-          <li><a href="resourses.html">Labs</a></li>
-          <li><a href="under-construction.html">Downloads</a></li>
-        </ul>
-      </li>
-	  <li><a href="#">Research Groups</a>
-        <ul>
-          <li><a href="under-construction.html">Computer Vision</a></li>
-          <li><a href="under-construction.html">Network Security</a></li>
-          <li><a href="under-construction.html">Wireless Sensor Network</a></li>
-		  <li><a href="publications.html">Publications</a></li>
-        </ul>
-      </li>
-	  <li><a href="under-construction.html">Software Development</a></li>
-	  <li  class="last"><a href="contact.html">Contact</a></li>
-    </ul>
-    <div  class="clear"></div>
-  </div>
+        <div  class="clear"></div>
+    </div>
 </div>
-
-
-
-
 <!-- ####################################################################################################### -->
+
 
 <div class="wrapper row3">
 <br>
