--- a/pages/course/1st.html
+++ b/pages/course/1st.html
@@ -32,7 +32,7 @@
     <div id="content" style="width:73%;margin:-538px 0px 0px 250px;">
       <h1 class="title" style="font-size:18px;">Scheme of study: First Year</h1>
 	  <h1 style="font-size:16px;">First Term</h1>
-	  <table style="width:100%;color:BLACK;font-size:12;border:0;text-align:center;">
+	  <table style="width:100%;color:BLACK;font-size:12;border:0;text-align:center;line-height:20px;">
 		  <tr>
 		  <th> S# </th>
 		  <th> Code </th>
@@ -53,8 +53,9 @@
 		  <td> 1 </td>
 		  <td>  </td>
 		  </tr>
-		  tr>
-		  <td> 1 </td>
+		 
+		  <tr>
+		  <td> 2 </td>
 		  <td> CS102 </td>
 		  <td> Computer Programming </td>
 		  <td> Engg. </td>
