pec.html, cv.html and research groups

--- a/index.html
+++ b/index.html
@@ -271,13 +271,13 @@ margin-right:auto;
       </li>
 	  <li><a href="#">Research Groups</a>
         <ul>
-          <li><a href="pages/under-construction.html">Computer Vision</a></li>
+          <li><a href="pages/CV.html">Computer Vision</a></li>
           <li><a href="pages/under-construction.html">Network Security</a></li>
           <li><a href="pages/under-construction.html">Wireless Sensor Network</a></li>
 		  <li><a href="pages/publications.html">Publications</a></li>
         </ul>
       </li>
-	  <li><a href="pages/under-construction.html">PEC Accedreditation</a></li>
+	  <li><a href="pages/PEC.html">PEC Accedreditation</a></li>
 	  <li  class="last"><a href="pages/contact.html">Contact</a></li>
     </ul>
     <div  class="clear"></div>
@@ -359,7 +359,7 @@ margin-right:auto;
     <!-- ############ -->
     <div id="content" style="width:55%;margin:-434px 0px 0px 195px;">
       <h1 class="title" style="font-size:18px;">Mission and Vision</h1>
-      <p style="text-align:justify">
+      <p style="text-align:justify;font-size:110%;color:black">
 	  The mission of the Department of Computer Systems Engineering is to prepare undergraduate and graduate students for productive careers
 	  in industry, academia, and government by providing an outstanding environment for teaching, learning, and research in the theory and 
 	  applications of computing. The Department places high priority on establishing and maintaining innovative research programs to enhance 
@@ -367,11 +367,11 @@ margin-right:auto;
 	  </p>
 	  <br>
 	  <h2 class="title" style="font-size:18px;margin-top:-2px;">Message from Chairman</h2>
-      <p style="text-align:justify; margin-left:120px; width:76%;">Department of Computer Systems Engineering, as per its mission, strives to develop and maintain a high-quality, comprehensive, rigorous 
+      <p style="text-align:justify; margin-left:120px; width:76%;;font-size:110%;color:black">Department of Computer Systems Engineering, as per its mission, strives to develop and maintain a high-quality, comprehensive, rigorous
 	  and accredited teaching program in Computer Engineering to prepare graduates of competence, conscience, and compassion, who are prepared to 
 	  excel in the field of computing. </p>
 	  <img src="images/pk-home.jpg" style="padding:0px; width:100px; height:100px;margin:-118px 0 0 0px;">
-	  <p style="text-align:justify; margin-top: -3px;">In order to achieve this goal, we combine the theoritical foundations of computing with the practical 
+	  <p style="text-align:justify; margin-top: -3px;font-size:110%;color:black">In order to achieve this goal, we combine the theoritical foundations of computing with the practical
 	  engineering knowledge vital to industry, to provide a broad and integrated curriculum.</p>
      </div>
     <!-- ############ -->
