--- a/pages/course/2nd.html
+++ b/pages/course/2nd.html
@@ -19,8 +19,8 @@
       <div class="holder" style="height:520px;">
         <h1 class="title" style="font-size:18px;">Scheme</h1>
         <ul class="nostart" style="line-height:30px;">
-          <li><a href="1st.html" style="color:brown;"><b>First Year</b></a></li>
-          <li><a href="2nd.html" ><b>Second Year</b></a></li> 
+          <li><a href="1st.html"><b>First Year</b></a></li>
+          <li><a href="2nd.html" style="color:brown;"><b>Second Year</b></a></li> 
           <li><a href="3rd.html" ><b>Third Year</b></a></li>
           <li><a href="4th.html"><b>Fourth Year</b></a></li>
 		  <li><a href="summ.html"><b>Summary</b></a></li>
@@ -31,7 +31,7 @@
     </div>
     <!-- ############ -->
     <div id="content" style="width:86%;margin:-538px 0px 0px 140px;">
-      <h1 class="title" style="font-size:18px;">Scheme of study: First Year</h1>
+      <h1 class="title" style="font-size:18px;">Scheme of study: Second Year</h1>
 	  <h1 style="font-size:16px;">First Term</h1>
 	  <table style="width:100%;color:BLACK;font-size:12;border:0;text-align:center;line-height:26px;border:1px solid grey;">
 		  <tr style="background-color:#E0DFDF">
@@ -46,28 +46,18 @@
 		  </tr>
 		  <tr>
 		  <td> 1 </td>
-		  <td> CS101 </td>
-		  <td> Introduction To Computing </td>
-		  <td> Engg. </td>
-		  <td> Computing </td>
-		  <td> 3 </td>
-		  <td> 1 </td>
+		  <td> BS402 </td>
+		  <td> Professional & Social Ethics </td>
+		  <td> Non-Engg. </td>
+		  <td> Humanities </td>
+		  <td> 2 </td>
+		  <td> 0 </td>
 		  <td>  </td>
 		  </tr>
 		  <tr>
 		  <td> 2 </td>
-		  <td> CS102 </td>
-		  <td> Computer Programming </td>
-		  <td> Engg. </td>
-		  <td> Computing </td>
-		  <td> 3 </td>
-		  <td> 1 </td>
-		  <td>  </td>
-		  </tr>
-		  <tr>
-		  <td> 3 </td>
-		  <td> EL101 </td>
-		  <td> Basic Electrical Engineering </td>
+		  <td> CS202 </td>
+		  <td> Data Structures & Algorithms </td>
 		  <td> Engg. </td>
 		  <td> Engineering Foundation </td>
 		  <td> 3 </td>
@@ -75,9 +65,30 @@
 		  <td>  </td>
 		  </tr>
 		  <tr>
+		  <td> 3 </td>
+		  <td> CS103 </td>
+		  <td> Database Management Systems </td>
+		  <td> Engg. </td>
+		  <td> Major Based Core (Breadth) </td>
+		  <td> 3 </td>
+		  <td> 1 </td>
+		  <td>  </td>
+		  </tr>
+		  <tr>
+		  <tr>
 		  <td> 4 </td>
-		  <td> BS102 </td>
-		  <td> Linear Algebra & Analytical Geometry </td>
+		  <td> CS204 </td>
+		  <td> Digital Logic & Design </td>
+		  <td> Engg. </td>
+		  <td> Engineering Foundation </td>
+		  <td> 3 </td>
+		  <td> 1 </td>
+		  <td>  </td>
+		  </tr>
+		  <tr>
+		  <td> 5 </td>
+		  <td> BS103 </td>
+		  <td> Differential Equations & Fourier Series </td>
 		  <td> Non-Engg. </td>
 		  <td> Natural Sciences </td>
 		  <td> 3 </td>
@@ -85,24 +96,16 @@
 		  <td>  </td>
 		  </tr>
 		  <tr>
-		  <td> 5 </td>
-		  <td> BS106 </td>
-		  <td> Functional English </td>
-		  <td> Non-Engg. </td>
-		  <td> Humanities </td>
-		  <td> 3 </td>
-		  <td> 1 </td>
-		  <td>  </td>
-		  </tr>
+		  
 		  <tr>
 		  <td>  </td>
 		  <td>  </td>
 		  <td>  </td>
 		  <td>  </td>
 		  <td> Sub-total </td>
-		  <td> 15</td>
+		  <td> 14</td>
 		  <td> 3 </td>
-		  <td> 18 </td>
+		  <td> 17 </td>
 		  </tr>
 	  </table>
 		<br>
@@ -120,8 +123,28 @@
 		  </tr>
 		  <tr>
 		  <td> 1 </td>
-		  <td> CS103 </td>
-		  <td> Object Oriented Programming </td>
+		  <td> CS205 </td>
+		  <td> Computer Architecture & Design </td>
+		  <td> Engg. </td>
+		  <td> Major Based Core (Breadth) </td>
+		  <td> 3 </td>
+		  <td> 0 </td>
+		  <td>  </td>
+		  </tr>
+		  <tr>
+		  <td> 2 </td>
+		  <td> CS206 </td>
+		  <td> Digital Communication </td>
+		  <td> Engg. </td>
+		  <td> Engineering Foundation </td>
+		  <td> 3 </td>
+		  <td> 1 </td>
+		  <td>  </td>
+		  </tr>
+		  <tr>
+		  <td> 3 </td>
+		  <td> CS207 </td>
+		  <td> Operating Systems </td>
 		  <td> Engg. </td>
 		  <td> Major Based Core (Breadth) </td>
 		  <td> 3 </td>
@@ -129,53 +152,22 @@
 		  <td>  </td>
 		  </tr>
 		  <tr>
-		  <td> 2 </td>
-		  <td> EL104 </td>
-		  <td> Circuit Analysis </td>
-		  <td> Engg. </td>
-		  <td> Engineering Foundation </td>
-		  <td> 3 </td>
-		  <td> 1 </td>
-		  <td>  </td>
-		  </tr>
-		  <tr>
-		  <td> 3 </td>
-		  <td> ED205 </td>
-		  <td> Electronic Engineering </td>
-		  <td> Engg. </td>
-		  <td> Engineering Foundation </td>
-		  <td> 3 </td>
-		  <td> 1 </td>
-		  <td>  </td>
-		  </tr>
-		  <tr>
 		  <td> 4 </td>
-		  <td> BS101 </td>
-		  <td> Calculas </td>
-		  <td> Non-Engg. </td>
-		  <td> Natural Sciences </td>
+		  <td> CS208 </td>
+		  <td> Visual Programming </td>
+		  <td> Engg. </td>
+		  <td> Computing </td>
 		  <td> 3 </td>
-		  <td> 0 </td>
+		  <td> 1 </td>
 		  <td>  </td>
 		  </tr>
 		  <tr>
 		  <td> 5 </td>
-		  <td> BS104 </td>
-		  <td> Pakistan Studies </td>
+		  <td> BS202 </td>
+		  <td> Laplace Transform & Discrete Mathematics </td>
 		  <td> Non-Engg. </td>
-		  <td> Humanities </td>
-		  <td> 2 </td>
-		  <td> 0 </td>
-		  <td>  </td>
-		  </tr>
-		  <tr>
-		  <tr>
-		  <td> 6 </td>
-		  <td> BS105 </td>
-		  <td> Islamic Studies/Ethics </td>
-		  <td> Non-Engg. </td>
-		  <td> Humanities </td>
-		  <td> 2 </td>
+		  <td> Natural Sciences </td>
+		  <td> 3 </td>
 		  <td> 0 </td>
 		  <td>  </td>
 		  </tr>
@@ -185,9 +177,9 @@
 		  <td>  </td>
 		  <td>  </td>
 		  <td> Sub-total </td>
-		  <td> 16</td>
+		  <td> 15</td>
 		  <td> 3 </td>
-		  <td> 19 </td>
+		  <td> 18 </td>
 		  </tr>
 	  </table>
 	  
