--- a/pages/course/3rd.html
+++ b/pages/course/3rd.html
@@ -19,9 +19,9 @@
       <div class="holder" style="height:520px;">
         <h1 class="title" style="font-size:18px;">Scheme</h1>
         <ul class="nostart" style="line-height:30px;">
-          <li><a href="1st.html" style="color:brown;"><b>First Year</b></a></li>
-          <li><a href="2nd.html" ><b>Second Year</b></a></li> 
-          <li><a href="3rd.html" ><b>Third Year</b></a></li>
+          <li><a href="1st.html"><b>First Year</b></a></li>
+          <li><a href="2nd.html"><b>Second Year</b></a></li> 
+          <li><a href="3rd.html" style="color:brown;"><b>Third Year</b></a></li>
           <li><a href="4th.html"><b>Fourth Year</b></a></li>
 		  <li><a href="summ.html"><b>Summary</b></a></li>
           
@@ -31,7 +31,7 @@
     </div>
     <!-- ############ -->
     <div id="content" style="width:86%;margin:-538px 0px 0px 140px;">
-      <h1 class="title" style="font-size:18px;">Scheme of study: First Year</h1>
+      <h1 class="title" style="font-size:18px;">Scheme of study: Third Year</h1>
 	  <h1 style="font-size:16px;">First Term</h1>
 	  <table style="width:100%;color:BLACK;font-size:12;border:0;text-align:center;line-height:26px;border:1px solid grey;">
 		  <tr style="background-color:#E0DFDF">
@@ -46,38 +46,49 @@
 		  </tr>
 		  <tr>
 		  <td> 1 </td>
-		  <td> CS101 </td>
-		  <td> Introduction To Computing </td>
+		  <td> CS301 </td>
+		  <td> Computer Graphics </td>
 		  <td> Engg. </td>
-		  <td> Computing </td>
+		  <td> Major Based Core (Depth) </td>
 		  <td> 3 </td>
 		  <td> 1 </td>
 		  <td>  </td>
 		  </tr>
 		  <tr>
 		  <td> 2 </td>
-		  <td> CS102 </td>
-		  <td> Computer Programming </td>
+		  <td> BS302 </td>
+		  <td> Engineering Economics </td>
+		  <td> Non-Engg. </td>
+		  <td> Humanities </td>
+		  <td> 2 </td>
+		  <td> 0 </td>
+		  <td>  </td>
+		  </tr>
+		  <tr>
+		  <td> 3 </td>
+		  <td> CS303 </td>
+		  <td> Microprocessor </td>
 		  <td> Engg. </td>
-		  <td> Computing </td>
+		  <td> Major Based Core (Breadth) </td>
 		  <td> 3 </td>
 		  <td> 1 </td>
 		  <td>  </td>
 		  </tr>
 		  <tr>
-		  <td> 3 </td>
-		  <td> EL101 </td>
-		  <td> Basic Electrical Engineering </td>
-		  <td> Engg. </td>
-		  <td> Engineering Foundation </td>
-		  <td> 3 </td>
-		  <td> 1 </td>
-		  <td>  </td>
-		  </tr>
 		  <tr>
 		  <td> 4 </td>
-		  <td> BS102 </td>
-		  <td> Linear Algebra & Analytical Geometry </td>
+		  <td> CS304 </td>
+		  <td> Computer Networks </td>
+		  <td> Engg. </td>
+		  <td> Major Based Core (Breadth) </td>
+		  <td> 3 </td>
+		  <td> 1 </td>
+		  <td>  </td>
+		  </tr>
+		  <tr>
+		  <td> 5 </td>
+		  <td> MS331 </td>
+		  <td> Statical Methods & Estimation </td>
 		  <td> Non-Engg. </td>
 		  <td> Natural Sciences </td>
 		  <td> 3 </td>
@@ -85,24 +96,16 @@
 		  <td>  </td>
 		  </tr>
 		  <tr>
-		  <td> 5 </td>
-		  <td> BS106 </td>
-		  <td> Functional English </td>
-		  <td> Non-Engg. </td>
-		  <td> Humanities </td>
-		  <td> 3 </td>
-		  <td> 1 </td>
-		  <td>  </td>
-		  </tr>
+		  
 		  <tr>
 		  <td>  </td>
 		  <td>  </td>
 		  <td>  </td>
 		  <td>  </td>
 		  <td> Sub-total </td>
-		  <td> 15</td>
+		  <td> 14</td>
 		  <td> 3 </td>
-		  <td> 18 </td>
+		  <td> 17 </td>
 		  </tr>
 	  </table>
 		<br>
@@ -120,63 +123,52 @@
 		  </tr>
 		  <tr>
 		  <td> 1 </td>
-		  <td> CS103 </td>
-		  <td> Object Oriented Programming </td>
+		  <td> CS305 </td>
+		  <td> Artificial Intelligence </td>
 		  <td> Engg. </td>
-		  <td> Major Based Core (Breadth) </td>
+		  <td> IDEE </td>
 		  <td> 3 </td>
 		  <td> 1 </td>
 		  <td>  </td>
 		  </tr>
 		  <tr>
 		  <td> 2 </td>
-		  <td> EL104 </td>
-		  <td> Circuit Analysis </td>
+		  <td> CS306 </td>
+		  <td> Software Engineering </td>
 		  <td> Engg. </td>
-		  <td> Engineering Foundation </td>
+		  <td> Major Based Core (Depth) </td>
 		  <td> 3 </td>
 		  <td> 1 </td>
 		  <td>  </td>
 		  </tr>
 		  <tr>
 		  <td> 3 </td>
-		  <td> ED205 </td>
-		  <td> Electronic Engineering </td>
+		  <td> CS307 </td>
+		  <td> Web Engineering </td>
 		  <td> Engg. </td>
-		  <td> Engineering Foundation </td>
+		  <td> Major Based Core (Depth) </td>
 		  <td> 3 </td>
 		  <td> 1 </td>
 		  <td>  </td>
 		  </tr>
 		  <tr>
 		  <td> 4 </td>
-		  <td> BS101 </td>
-		  <td> Calculas </td>
+		  <td> BS304 </td>
+		  <td> Technical Report Writing & Presentation Skills </td>
 		  <td> Non-Engg. </td>
-		  <td> Natural Sciences </td>
-		  <td> 3 </td>
+		  <td> Humanities </td>
+		  <td> 2 </td>
 		  <td> 0 </td>
 		  <td>  </td>
 		  </tr>
 		  <tr>
 		  <td> 5 </td>
-		  <td> BS104 </td>
-		  <td> Pakistan Studies </td>
-		  <td> Non-Engg. </td>
-		  <td> Humanities </td>
-		  <td> 2 </td>
-		  <td> 0 </td>
-		  <td>  </td>
-		  </tr>
-		  <tr>
-		  <tr>
-		  <td> 6 </td>
-		  <td> BS105 </td>
-		  <td> Islamic Studies/Ethics </td>
-		  <td> Non-Engg. </td>
-		  <td> Humanities </td>
-		  <td> 2 </td>
-		  <td> 0 </td>
+		  <td> CS309 </td>
+		  <td> Multimedia Technologies </td>
+		  <td> Engg. </td>
+		  <td> Major Based Core (Depth) </td>
+		  <td> 3 </td>
+		  <td> 1 </td>
 		  <td>  </td>
 		  </tr>
 		  <tr>
@@ -185,9 +177,9 @@
 		  <td>  </td>
 		  <td>  </td>
 		  <td> Sub-total </td>
-		  <td> 16</td>
-		  <td> 3 </td>
-		  <td> 19 </td>
+		  <td> 13</td>
+		  <td> 4 </td>
+		  <td> 17 </td>
 		  </tr>
 	  </table>
 	  
