--- a/pages/course/4th.html
+++ b/pages/course/4th.html
@@ -19,10 +19,10 @@
       <div class="holder" style="height:520px;">
         <h1 class="title" style="font-size:18px;">Scheme</h1>
         <ul class="nostart" style="line-height:30px;">
-          <li><a href="1st.html" style="color:brown;"><b>First Year</b></a></li>
-          <li><a href="2nd.html" ><b>Second Year</b></a></li> 
+          <li><a href="1st.html"><b>First Year</b></a></li>
+          <li><a href="2nd.html"><b>Second Year</b></a></li> 
           <li><a href="3rd.html" ><b>Third Year</b></a></li>
-          <li><a href="4th.html"><b>Fourth Year</b></a></li>
+          <li><a href="4th.html" style="color:brown;"><b>Fourth Year</b></a></li>
 		  <li><a href="summ.html"><b>Summary</b></a></li>
           
         </ul>
@@ -31,7 +31,7 @@
     </div>
     <!-- ############ -->
     <div id="content" style="width:86%;margin:-538px 0px 0px 140px;">
-      <h1 class="title" style="font-size:18px;">Scheme of study: First Year</h1>
+      <h1 class="title" style="font-size:18px;">Scheme of study: Fourth Year</h1>
 	  <h1 style="font-size:16px;">First Term</h1>
 	  <table style="width:100%;color:BLACK;font-size:12;border:0;text-align:center;line-height:26px;border:1px solid grey;">
 		  <tr style="background-color:#E0DFDF">
@@ -46,62 +46,65 @@
 		  </tr>
 		  <tr>
 		  <td> 1 </td>
-		  <td> CS101 </td>
-		  <td> Introduction To Computing </td>
+		  <td> CS401 </td>
+		  <td> Embedded Systems </td>
 		  <td> Engg. </td>
-		  <td> Computing </td>
+		  <td> Major Based Core (Depth) </td>
 		  <td> 3 </td>
 		  <td> 1 </td>
 		  <td>  </td>
 		  </tr>
 		  <tr>
 		  <td> 2 </td>
-		  <td> CS102 </td>
-		  <td> Computer Programming </td>
-		  <td> Engg. </td>
-		  <td> Computing </td>
-		  <td> 3 </td>
-		  <td> 1 </td>
-		  <td>  </td>
-		  </tr>
-		  <tr>
-		  <td> 3 </td>
-		  <td> EL101 </td>
-		  <td> Basic Electrical Engineering </td>
-		  <td> Engg. </td>
-		  <td> Engineering Foundation </td>
-		  <td> 3 </td>
-		  <td> 1 </td>
-		  <td>  </td>
-		  </tr>
-		  <tr>
-		  <td> 4 </td>
-		  <td> BS102 </td>
-		  <td> Linear Algebra & Analytical Geometry </td>
+		  <td> BS403 </td>
+		  <td> Enterpreneurship & Leadership </td>
 		  <td> Non-Engg. </td>
-		  <td> Natural Sciences </td>
-		  <td> 3 </td>
+		  <td> Management Sciences </td>
+		  <td> 2 </td>
 		  <td> 0 </td>
 		  <td>  </td>
 		  </tr>
 		  <tr>
-		  <td> 5 </td>
-		  <td> BS106 </td>
-		  <td> Functional English </td>
-		  <td> Non-Engg. </td>
-		  <td> Humanities </td>
+		  <td> 3 </td>
+		  <td> CS403 </td>
+		  <td> Data Warehousing & Mining </td>
+		  <td> Engg. </td>
+		  <td> Major Based Core (Depth) </td>
 		  <td> 3 </td>
 		  <td> 1 </td>
 		  <td>  </td>
 		  </tr>
+		  <tr>
+		  <tr>
+		  <td> 4 </td>
+		  <td> CS404 </td>
+		  <td> Wireless Communication </td>
+		  <td> Engg. </td>
+		  <td> Major Based Core (Depth) </td>
+		  <td> 3 </td>
+		  <td> 1 </td>
+		  <td>  </td>
+		  </tr>
+		  <tr>
+		  <td> 5 </td>
+		  <td> CS405 </td>
+		  <td> Image Processing </td>
+		  <td> Engg. </td>
+		  <td> IDEE </td>
+		  <td> 3 </td>
+		  <td> 1 </td>
+		  <td>  </td>
+		  </tr>
+		  <tr>
+		  
 		  <tr>
 		  <td>  </td>
 		  <td>  </td>
 		  <td>  </td>
 		  <td>  </td>
 		  <td> Sub-total </td>
-		  <td> 15</td>
-		  <td> 3 </td>
+		  <td> 14</td>
+		  <td> 4 </td>
 		  <td> 18 </td>
 		  </tr>
 	  </table>
@@ -120,74 +123,54 @@
 		  </tr>
 		  <tr>
 		  <td> 1 </td>
-		  <td> CS103 </td>
-		  <td> Object Oriented Programming </td>
+		  <td> CS406 </td>
+		  <td> System Administration </td>
 		  <td> Engg. </td>
-		  <td> Major Based Core (Breadth) </td>
+		  <td> Major Based Core (Depth) </td>
 		  <td> 3 </td>
 		  <td> 1 </td>
 		  <td>  </td>
 		  </tr>
 		  <tr>
 		  <td> 2 </td>
-		  <td> EL104 </td>
-		  <td> Circuit Analysis </td>
+		  <td> CS407 </td>
+		  <td> Mobile Application Development </td>
 		  <td> Engg. </td>
-		  <td> Engineering Foundation </td>
+		  <td> Major Based Core (Depth) </td>
 		  <td> 3 </td>
 		  <td> 1 </td>
 		  <td>  </td>
 		  </tr>
 		  <tr>
 		  <td> 3 </td>
-		  <td> ED205 </td>
-		  <td> Electronic Engineering </td>
+		  <td> CS408 </td>
+		  <td> Parallel & Distribued Computing</td>
 		  <td> Engg. </td>
-		  <td> Engineering Foundation </td>
+		  <td> IDEE </td>
 		  <td> 3 </td>
 		  <td> 1 </td>
 		  <td>  </td>
 		  </tr>
 		  <tr>
 		  <td> 4 </td>
-		  <td> BS101 </td>
-		  <td> Calculas </td>
-		  <td> Non-Engg. </td>
-		  <td> Natural Sciences </td>
-		  <td> 3 </td>
+		  <td> CS409 </td>
+		  <td> Project/Thesis </td>
+		  <td> Engg. </td>
+		  <td> Senior Project Design </td>
 		  <td> 0 </td>
-		  <td>  </td>
-		  </tr>
-		  <tr>
-		  <td> 5 </td>
-		  <td> BS104 </td>
-		  <td> Pakistan Studies </td>
-		  <td> Non-Engg. </td>
-		  <td> Humanities </td>
-		  <td> 2 </td>
-		  <td> 0 </td>
-		  <td>  </td>
-		  </tr>
-		  <tr>
-		  <tr>
 		  <td> 6 </td>
-		  <td> BS105 </td>
-		  <td> Islamic Studies/Ethics </td>
-		  <td> Non-Engg. </td>
-		  <td> Humanities </td>
-		  <td> 2 </td>
-		  <td> 0 </td>
 		  <td>  </td>
 		  </tr>
+		
 		  <tr>
 		  <td>  </td>
 		  <td>  </td>
 		  <td>  </td>
 		  <td>  </td>
 		  <td> Sub-total </td>
-		  <td> 16</td>
-		  <td> 3 </td>
-		  <td> 19 </td>
+		  <td> 9</td>
+		  <td> 9 </td>
+		  <td> 18 </td>
 		  </tr>
 	  </table>
 	  
