added logo, research groups

--- a/index.html
+++ b/index.html
@@ -238,11 +238,14 @@ margin-right:auto;
 <div class="wrapper row1">
   <div id="header" class="clear" >
     <div class="fl_left">
-      <a href="http://quest.edu.pk" target="_blank"><img src="images/logo.png" style="padding:0px; height:100px;width:110px;margin:0px 0px -120px -70px;"></a>
+      <a href="http://quest.edu.pk" target="_blank"><img src="images/CSE2.png" style="padding:0px; height:100px;width:110px;margin:0px 0px -120px -70px;"></a>
       <h1 style="margin-top:5px;margin-left:60px;"><a href="#">Computer Systems Engineering Department</a></h1>
-      <h2 style="margin-left:60px; margin-bottom:0px;">Quaid-e-awam University of Engineering, Science & Technology,</h2>
-	  <h2 style="margin-left:60px;margin-bottom:0px;">Nawabshah-Pakistan</h2>
+      <h2 style="margin-left:60px; margin-bottom:0px;color:greenyellow">Quaid-e-awam University of Engineering, Science & Technology,</h2>
+	  <h2 style="margin-left:60px;margin-bottom:0px;color:greenyellow">Nawabshah-Pakistan</h2>
 	 
+  </div>
+  <div class="fl_right">
+      <a href="http://quest.edu.pk" target="_blank"><img src="images/quest.jpg" style="padding:0px; height:100px;width:110px;margin:0px 0px -120px -70px;"></a>
   </div>
   </div>
 </div>
@@ -272,8 +275,8 @@ margin-right:auto;
 	  <li><a href="#">Research Groups</a>
         <ul>
           <li><a href="pages/CV.html">Computer Vision</a></li>
-          <li><a href="pages/under-construction.html">Network Security</a></li>
-          <li><a href="pages/under-construction.html">Wireless Sensor Network</a></li>
+          <li><a href="pages/NS.html">Network Security</a></li>
+          <li><a href="pages/WSN.html">Wireless Sensor Network</a></li>
 		  <li><a href="pages/publications.html">Publications</a></li>
         </ul>
       </li>
