--- a/pages/CV.html
+++ b/pages/CV.html
@@ -6,7 +6,6 @@
 <link rel="icon" href="../images/favicon.png" type="image/png">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <link rel="stylesheet" href="../layout/styles/layout.css" type="text/css" />
-    <link rel="stylesheet" href="../layout/styles/photo.css" type="text/css" />
 <script type="text/javascript" src="../layout/scripts/jquery.min.js"></script>
 <!-- liteAccordion is Homepage Only -->
 <link rel="stylesheet" href="../layout/scripts/liteaccordion-v2.2/css/liteaccordion.css" type="text/css" />
@@ -48,7 +47,7 @@
             </li>
             <li><a href="#">Research Groups</a>
                 <ul>
-                    <li><a href="pages/under-construction.html">Computer Vision</a></li>
+                    <li><a href="pages/CV.html">Computer Vision</a></li>
                     <li><a href="pages/under-construction.html">Network Security</a></li>
                     <li><a href="pages/under-construction.html">Wireless Sensor Network</a></li>
                     <li><a href="pages/publications.html">Publications</a></li>
@@ -66,40 +65,77 @@
 <br>
 </div>
 <div class="wrapper row4">
-<div id="container" class="clear" >
-<!-- ####################################################################################################### -->
-<div id="content" style="width:100%;padding-bottom:10%"><br><br>
-    <img src="../images/cv0.jpeg" style="height:250px;margin-left:-10%">
-    <p align="justify" style="margin-left:20%;margin-top:-22%;font-size:110%;color:black;line-height:22px">Our research group is working on a range of topics in Computer Vision, Image Processing and Pattern Recognition. Computer Vision is about interpreting images. More specifically the goal is to infer properties of the observed world from an image or a collection of images. Our work combines a range of mathematical domains including statistical inference, differential geometry, continuous (partial differential equations) and discrete (graph-theoretic) optimization techniques.<br>
-    At present, our research in the CV group is mainly focused on the deep learning. Besides, we are working on the following research areas: <br>
-    </p>
-    <ul style="margin-left:22%;font-size:110%;color:black;line-height:22px">
-        <li>Image and video understanding</li>
-        <li>Shape analysis</li>
-        <li>Image segmentation</li>
-        <li>Robot vision</li>
-    </ul>
+  <div id="container" class="clear">
+      <h2 style="margin-left:20%;margin-top:3%;color:darkolivegreen"><b>Computer Vision Research Group</b></h2><br>
+      <img src="../images/cv0.png" style="width:250px;height:250px;margin-left:-10%;margin-top:-5%;padding-bottom:5%">
+      <div id="content" style="width:100%">
+          <p align="justify" style="margin-left:20%;margin-top:-27%;font-size:110%;color:black;line-height:22px">
+              Our research group is working on a range of topics in Computer Vision, Image Processing and Pattern
+              Recognition. Computer Vision is about interpreting images. More specifically the goal is to infer
+              properties of the observed world from an image or a collection of images. <br>
+              As a scientific discipline, computer vision is concerned with the theory and technology for building
+              artificial systems that obtain information from images or multi-dimensional data. Information is that
+              which enables a decision. Since perception can be seen as the extraction of information from sensory
+              signals, computer vision can be seen as the scientific investigation of artificial systems for perception
+              from images or multi-dimensional data.<br>
+              At present, our research in the CV group is mainly focused on the deep learning. Besides, we are working
+              on the following research areas: <br>
+          </p>
+          <ul style="margin-left:22%;font-size:110%;color:black;line-height:22px">
+              <li>Image and video understanding</li>
+              <li>Shape analysis</li>
+              <li>Image segmentation</li>
+              <li>Robot vision</li>
+          </ul>
+          <div class="article" style="margin-left: 20%;margin-top:3%">
+              <h2 style="color:darkolivegreen"><b>Group Members:</b> </h2><br>
+              <div class="content_image_small"><img src="../images/umair.jpg" width="120" height="120"></div>
+              <h3 style="margin-left:20%;margin-top:-15%">Dr. Umair Ali Khan </h3>
+              <p style="text-align: justify;margin-left:20%"> Associate Professor, CSE Dept.,<br> QUEST, Nawabshah.
+                  <br><b>Email:</b> <a href="umair.khan@quest.edu.pk">umair.khan@quest.edu.pk </a> <br>
+                  <b>Phone:</b> : +92-244-9370381 (ext. 2640)
+              </p>
+              <br>
+              <div class="content_image_small"><img src="../images/fareed.jpg" width="120" height="120"></div>
+              <h3 style="margin-left:20%;margin-top:-15%">Dr. Fareed A. Jokhio </h3>
+              <p style="text-align: justify;margin-left:20%"> Associate Professor, CSE Dept.,<br> QUEST, Nawabshah.
+                  <br><b>Email:</b> <a href="fajokhio@quest.edu.pk">fajokhio@quest.edu.pk </a> <br>
+                  <b>Phone:</b> : +92-244-9370381-5 (ext. 2148)
+              </p>
+              <br>
+              <div class="content_image_small"><img src="../images/sajda.jpg" width="120" height="120"></div>
+              <h3 style="margin-left:20%;margin-top:-15%">Dr. Sajda Parveen </h3>
+              <p style="text-align: justify;margin-left:20%"> Assistant Professor, CSE Dept.,<br> QUEST, Nawabshah.
+                  <br><b>Email:</b> <a href="sajidaparveen@quest.edu.pk">sajidaparveen@quest.edu.pk </a> <br>
+                  <b>Phone:</b> : +92-244-9370381-5 (ext. 2131)
+              </p>
+              <br>
+              <div class="content_image_small"><img src="../images/fayaz.jpg" width="120" height="120"></div>
+              <h3 style="margin-left:20%;margin-top:-15%">Engr. Fayaz Ahmed Memon </h3>
+              <p style="text-align: justify;margin-left:20%"> Assistant Professor, CSE Dept.,<br> QUEST, Nawabshah.
+                  <br><b>Email:</b> <a href="engr_fayaz@hotmail.com">engr_fayaz@hotmail.com</a> <br>
+                  <b>Phone:</b> : +92-244-9370381-5 (ext. 2425)
+              </p>
+              <br>
+              <div class="content_image_small"><img src="../images/zuhaib.jpg" width="120" height="120"></div>
+              <h3 style="margin-left:20%;margin-top:-15%">Engr. Zuhaib A. Shaikh </h3>
+              <p style="text-align: justify;margin-left:20%"> Assistant Professor, CSE Dept.,<br> QUEST, Nawabshah.
+                  <br><b>Email:</b> <a href="zuhaib.shaikh@quest.edu.pk">zuhaib.shaikh@quest.edu.pk</a> <br>
+                  <b>Phone:</b> : +92-244-9370381-5 (ext. 2638)
+              </p>
+              <br>
+          </div>
+      </div>
+  </div>
 </div>
 
-    <div class="article" style="margin-left:20%;margin-top:0%">
-        <h2>Group Members:</h2><br>
-        <div class="clr"></div>
-        <div class="content_image_small"><img src="../images/umair.jpg" width="120" height="120"></div>
-        <h3 style="margin:20 0 0 0px">Dr. Umair Ali Khan</h3>
-        <p style="text-align: justify"> Associate Professor, CSE Dept.,<br> QUEST, Nawabshah.
-            <br><b>Email:</b> <a href="umair.khan@quest.edu.pk">umair.khan@quest.edu.pk </a> <br>
-            <b>Phone:</b> +92-244-9370381(ext. 2640), Mobile 0333-7024006
-        </p>
-        <br>
-    </div>
 
-</div>
-</div>
+
 <div class="wrapper">
-    <div id="copyright" class="clear">
-        <center><p class="fl_left">Copyright &copy; 2015-16 - All Rights Reserved <br> <a href="http://www.quest.edu.pk">QUEST, Nawabshah-Pakistan</a></p></center>
-        <center><p class="fl_right">Developed and Maintained by <br><a target="_blank" href="http://zuhaib-shaikh.neocities.org">Zuhaib A. Shaikh</a> | <a target="_blank" href="http://umair-khan.quest.edu.pk">Umair A. Khan</a><br><a target="_blank" href="https://www.facebook.com/daniyalsaeed6">Daniyal(14cs13)</a> | <a target="_blank" href="https://www.facebook.com/aaqibakhtarblogger">Aaqib(14cs11)</a></p></center>
-    </div>
+  <div id="copyright" class="clear">
+    <center><p class="fl_left">Copyright &copy; 2015-16 - All Rights Reserved <br> <a href="http://www.quest.edu.pk">QUEST, Nawabshah-Pakistan</a></p></center>
+    <center><p class="fl_right">Developed and Maintained by <br><a target="_blank" href="http://zuhaib-shaikh.neocities.org">Zuhaib A. Shaikh</a> | <a target="_blank" href="http://umair-khan.quest.edu.pk">Umair A. Khan</a><br><a target="_blank" href="https://www.facebook.com/daniyalsaeed6">Daniyal(14cs13)</a> | <a target="_blank" href="https://www.facebook.com/aaqibakhtarblogger">Aaqib(14cs11)</a></p></center>
+  </div>
 </div>
 </body>
 </html>
