logo and other changes

--- a/pages/PEC.html
+++ b/pages/PEC.html
@@ -68,7 +68,7 @@
   <div id="container" class="clear" >
     <!-- ####################################################################################################### -->
     <div id="content" style="width:100%;marign-left:10%;padding-bottom:10%">
-      <img src="../images/pec.jpeg" style="height:250px;">
+      <img src="../images/pec.png" style="height:250px;">
         <p align="justify" style="margin-left:30%;margin-top:-22%;font-size:110%;color:black;line-height:22px">Pakistan Engineering Council is well-known organization that includes registration of engineers and accreditation of engineering programs offered by many universities including QUEST. PEC ensures and manages the standards for engineering products and services. The council also encourages, facilitates and regulates working of professional engineering bodies for creativity and as custodians of engineering under the umbrella of the Council. Computer Systems Department is accredited form PEC up-to 2013 batch. While, PEC visit for the accreditation of current batches is due in month of October 2017.</p>
 	</div>
 
