added CSE4.png, index.html and WSN.html

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ margin-right:auto;
     });
 </script>
 	<div class="flex-container" style="margin-left:6.5%;">
-    <div class="flexslider" >
+    <div class="flexslider" style="margin-top:-4%;">
         <ul class="slides">
             <li>
                 <img src="images/demo/featured-slide/1.JPG" alt="" />
