--- a/pages/WSN.html
+++ b/pages/WSN.html
@@ -66,7 +66,7 @@
 </div>
 <div class="wrapper row4">
     <div id="container" class="clear">
-        <h2 style="margin-left:20%;margin-top:3%;color:darkolivegreen"><b>Network Security Research Group</b></h2><br>
+        <h2 style="margin-left:20%;margin-top:3%;color:darkolivegreen"><b>Wireless Sensor Networks Research Group</b></h2><br>
         <img src="../images/WSN.png" style="width:250px;height:250px;margin-left:-10%;margin-top:-5%;padding-bottom:5%">
         <div id="content" style="width:100%">
             <p align="justify" style="margin-left:20%;margin-top:-27%;font-size:110%;color:black;line-height:22px">
