--- a/index.html
+++ b/index.html
@@ -261,15 +261,9 @@ margin-right:auto;
 <div class="wrapper row1">
   <div id="header" class="clear" >
     <div class="fl_left">
-      <a href="http://quest.edu.pk" target="_blank"><img src="images/CSE2.png" style="padding:0px; height:100px;width:100px;margin:0px 0px -120px -70px;"></a>
-      <h1 style="margin-top:5px;margin-left:60px"><a href="#">Computer Systems Engineering Department</a></h1>
-      <h2 style="margin-left:60px; margin-bottom:0px;color:greenyellow">Quaid-e-awam University of Engineering, Science & Technology,</h2>
-	  <h2 style="margin-left:60px;margin-bottom:0px;color:greenyellow">Nawabshah-Pakistan</h2>
+        <img src="images/header.png" style="padding:0px; height:20%;width:80%;">
   </div>
 
-  <div style="margin-left:90%">
-      <a href="http://quest.edu.pk" target="_blank"><img src="images/quest.png" style="padding:0px; height:100px;width:110px;margin:0px 0px -120px -70px;"></a>
-  </div>
   <div style="margin-left:100%;width:17%;margin-top:8%">
       <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
           <a class="a2a_button_facebook"></a>
@@ -395,7 +389,7 @@ margin-right:auto;
     <!-- ############ -->
     <div id="content" style="width:65%;margin:-45.2% 0px 0px 16%;">
       <h1 class="title" style="font-size:18px;">Mission and Vision</h1>
-      <p style="text-align:justify;font-size:110%;color:black">
+      <p style="text-align:justify;font-size:110%;">
 	  The mission of the Department of Computer Systems Engineering is to prepare undergraduate and graduate students for productive careers
 	  in industry, academia, and government by providing an outstanding environment for teaching, learning, and research in the theory and 
 	  applications of computing. The Department places high priority on establishing and maintaining innovative research programs to enhance 
@@ -404,7 +398,7 @@ margin-right:auto;
 	  </p>
 	  <br>
 	  <h2 class="title" style="font-size:18px;margin-top:-2px;">Message from Chairman</h2>
-      <p style="text-align:justify; margin-left:27%; width:73%;;font-size:110%;color:black">Department of Computer Systems Engineering, as per its mission, strives to develop and maintain a high-quality, comprehensive, rigorous
+      <p style="text-align:justify; margin-left:27%; width:73%;;font-size:110%;">Department of Computer Systems Engineering, as per its mission, strives to develop and maintain a high-quality, comprehensive, rigorous
 	  and accredited teaching program in Computer Engineering to prepare graduates of competence, conscience, and compassion, who are prepared to 
 	  excel in the field of computing.
       <br>
@@ -415,7 +409,7 @@ margin-right:auto;
 
      </div>
     <!-- ############ -->
-    <div id="right_column" style="width:20%;margin:-95% 0px 0px 85%;">
+    <div id="right_column" style="width:21%;margin:-95% 0px 0px 85%;">
       <div class="holder">
         <h2 class="title" style="font-size:18px;">News</h2>
 			<div class="scrolling_container">
@@ -442,7 +436,7 @@ margin-right:auto;
 
     </div>
 
-    <div id="right_column" style="width:20%;margin:11% 0px 0px 85%;">
+    <div id="right_column" style="width:21%;margin:11% 0px 0px 85%;">
           <div class="holder">
               <h2 class="title" style="font-size:18px;margin-top:12px;">Important Links</h2>
               <p><a href="http://quest.edu.pk" target="_blank">QUEST Website</a><br><br>
@@ -453,7 +447,7 @@ margin-right:auto;
           </div>
      </div>
 
-      <div id="right_column" style="width:20%;margin:3.5% 0px 0px 85%;">
+      <div id="right_column" style="width:21%;margin:3.5% 0px 0px 85%;">
           <div class="holder">
               <h2 class="title" style="font-size:18px;margin-top:12px;">Recent Events</h2>
               <p><a href="http://quest.edu.pk" target="_blank">C-CUBE Competition</a><br><br>
