--- a/index.html
+++ b/index.html
@@ -261,21 +261,14 @@ margin-right:auto;
 <div class="wrapper row1">
   <div id="header" class="clear" >
     <div class="fl_left">
-      <a href="http://quest.edu.pk" target="_blank"><img src="images/CSE2.png" style="padding:0px; height:100px;width:100px;margin:0px 0px -120px -70px;"></a>
-      <h1 style="margin-top:5px;margin-left:60px"><a href="#">Computer Systems Engineering Department</a></h1>
-      <h2 style="margin-left:60px; margin-bottom:0px;color:greenyellow">Quaid-e-awam University of Engineering, Science & Technology,</h2>
-	  <h2 style="margin-left:60px;margin-bottom:0px;color:greenyellow">Nawabshah-Pakistan</h2>
+	<img src="images/header.png" style="height:10%;width:93%;margin-left:-3%;">
   </div>
-
-  <div style="margin-left:90%">
-      <a href="http://quest.edu.pk" target="_blank"><img src="images/quest.png" style="padding:0px; height:100px;width:110px;margin:0px 0px -120px -70px;"></a>
-  </div>
-  <div style="margin-left:100%;width:17%;margin-top:8%">
+  <div style="float:right;margin-top:-3%;margin-right:-15%;">
       <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
           <a class="a2a_button_facebook"></a>
           <a class="a2a_button_twitter"></a>
           <a class="a2a_button_google_plus">
-              <a class="a2a_button_linkedin"></a>
+          <a class="a2a_button_linkedin"></a>
       </div>
       <script async src="https://static.addtoany.com/menu/page.js"></script>
   </div>
