--- a/index.html
+++ b/index.html
@@ -261,21 +261,15 @@ margin-right:auto;
 <div class="wrapper row1">
   <div id="header" class="clear" >
     <div class="fl_left">
-<<<<<<< HEAD
-	<img src="images/header.png" style="height:10%;width:93%;margin-left:-3%;">
-  </div>
-  <div style="float:right;margin-top:-3%;margin-right:-15%;">
-=======
-        <img src="images/header.png" style="padding:0px; height:20%;width:80%;">
+        <img src="images/header.png" style="padding:0px; height:20%;width:85%;margin-left:-3%">
   </div>
 
   <div style="margin-left:100%;width:17%;margin-top:8%">
->>>>>>> 95030f45d43d32758a3de2d4a017f2aea23ef2b5
       <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
           <a class="a2a_button_facebook"></a>
           <a class="a2a_button_twitter"></a>
           <a class="a2a_button_google_plus">
-          <a class="a2a_button_linkedin"></a>
+              <a class="a2a_button_linkedin"></a>
       </div>
       <script async src="https://static.addtoany.com/menu/page.js"></script>
   </div>
