Changes in faculty
Stilll more changes will be done...

--- a/pages/course/summ.html
+++ b/pages/course/summ.html
@@ -31,7 +31,7 @@
     </div>
     <!-- ############ -->
     <div id="content" style="width:86%;margin:-538px 0px 0px 140px;">
-      <h1 class="title" style="font-size:18px;">Scheme of study: Summary</h1>
+      <h1 class="title" style="font-size:18px;">Scheme of study: Summary</h1><br>
 	  <table style="width:100%;color:BLACK;font-size:12;border:0;text-align:center;line-height:26px;border:1px solid grey;">
 		  <tr style="background-color:#E0DFDF">
 		  <th> Domain </th>
@@ -65,7 +65,7 @@
 		  <tr style="border-bottom:1px solid grey"><td style="background-color:#E0DFDF;"></td><td></td><td></td><td></td><td></td></tr>
 		  <tr><td style="background-color:#E0DFDF"></td><td></td><td></td><td></td><td></td></tr>
 		  <tr>
-		  <th rowspan="7" style="background-color:#E0DFDF"> Non-Engineering </td>
+		  <th rowspan="7" style="background-color:#E0DFDF"> Engineering </th>
 		  <td> Computing </td>
 		  <td> 3 </td>
 		  <td> 11 </td>
@@ -82,12 +82,10 @@
 		  <td> 20 </td>
 		  </tr>
 		  <tr>
-		  <tr>
 		  <td> Computer Engineering (Depth) </td>
 		  <td> 10 </td>
 		  <td> 38 </td>
 		  </tr>
-		  <tr>
 		  <tr>
 		  <td> IDEE </td>
 		  <td> 3 </td>
@@ -102,6 +100,14 @@
 		  <td> Sub-total </td>
 		  <td> 28 </td>
 		  <td> 110 </td>
+		  </tr>
+		  <tr style="border-bottom:1px solid grey"><td style="background-color:#E0DFDF;"></td><td></td><td></td><td></td><td></td></tr>
+		  <tr>
+		  <td></td>
+		  <th> Grand Total</th>
+		  <th> 40</th>
+		  <th>140</th>
+		  <th>100%</th>
 		  </tr>
 	  </table>
 		<br>
